feat: add sbb- prefix to css classes

--- a/src/components/sbb-pearl-chain/sbb-pearl-chain-time/sbb-pearl-chain-time.scss
+++ b/src/components/sbb-pearl-chain/sbb-pearl-chain-time/sbb-pearl-chain-time.scss
@@ -4,24 +4,24 @@
   justify-content: space-between;
 }
 
-.timetable__row-walktime {
+.sbb-pearl-chain__time-walktime {
   @include text-xxs--regular;
 
   display: inline-flex;
   align-items: center;
 }
 
-.timetable__row-walktime:first-of-type {
+.sbb-pearl-chain__time-walktime:first-of-type {
   transform: translateX(calc(-1 * var(--sbb-spacing-fixed-1x)));
   margin-inline-end: var(--sbb-spacing-fixed-1x);
 }
 
-.timetable__row-walktime:last-of-type {
+.sbb-pearl-chain__time-walktime:last-of-type {
   transform: translateX(var(--sbb-spacing-fixed-1x));
   margin-inline-start: var(--sbb-spacing-fixed-1x);
 }
 
-.timetable__row-chain {
+.sbb-pearl-chain__time-chain {
   flex: 1 1 auto;
   align-self: center;
   margin-inline: var(--sbb-spacing-fixed-3x);
