--- a/src/components/sbb-alert/sbb-alert.scss
+++ b/src/components/sbb-alert/sbb-alert.scss
@@ -20,6 +20,12 @@
   }
 }
 
+:host([size='l']) {
+  --sbb-alert-title-font-size: var(--sbb-font-size-title-3);
+  --sbb-alert-title-line-height: var(--sbb-typo-line-height-titles);
+  --sbb-alert-icon-size: calc(1.5 * var(--sbb-size-icon-timetable-him-cus));
+}
+
 .sbb-alert__transition-wrapper {
   transition: height var(--sbb-animation-duration-6x) ease-in;
   overflow: hidden;
@@ -37,12 +43,6 @@
   background-color: var(--sbb-alert-background-color);
   border-radius: var(--sbb-alert-border-radius);
   transition: opacity var(--sbb-animation-duration-6x) ease-in;
-}
-
-.sbb-alert--size-l {
-  --sbb-alert-title-font-size: var(--sbb-font-size-title-3);
-  --sbb-alert-title-line-height: var(--sbb-typo-line-height-titles);
-  --sbb-alert-icon-size: calc(1.5 * var(--sbb-size-icon-timetable-him-cus));
 }
 
 .sbb-alert__icon,
