refactor: 1131 sbb-button refactor
- add accessibilityHasPopup and accessibilityControls to ButtonProperties interface
- add description to sbb-button readme.md
- fix text-decoration style issue on button as anchor
- add test-case for button inside anchor
- clean up button story
- adjust button logic
- adjust old link-button references to use the button now

--- a/src/components/sbb-button/sbb-button.scss
+++ b/src/components/sbb-button/sbb-button.scss
@@ -103,6 +103,10 @@
   }
 }
 
+a.sbb-button {
+  text-decoration: none;
+}
+
 .sbb-button--primary {
   &.sbb-button--negative {
     --color-active-background: var(--sbb-color-cloud-default);
