feat: change render fn to display a or button, adapt tests and stories

--- a/src/components/sbb-card/sbb-card.scss
+++ b/src/components/sbb-card/sbb-card.scss
@@ -74,6 +74,10 @@
   }
 }
 
+.sbb-card__opens-in-new-window {
+  @include screenReaderOnly;
+}
+
 :host(:active) {
   border: var(--sbb-border-width-2x) solid var(--sbb-color-smoke-default);
 }
