style: minor fix icon

--- a/src/components/sbb-header-action/sbb-header-action.scss
+++ b/src/components/sbb-header-action/sbb-header-action.scss
@@ -60,6 +60,7 @@
 
 .header-action__icon {
   line-height: 0;
+  color: var(--sbb-color-black-default);
   margin-right: var(--sbb-spacing-fixed-2x);
 }
 
