chore: minor fixes

--- a/src/components/sbb-card/sbb-card.scss
+++ b/src/components/sbb-card/sbb-card.scss
@@ -73,7 +73,7 @@
 
 .sbb-card__button {
   @include buttonReset;
-  @include text-m--regular;
+  @include text-s--regular;
 
   text-align: inherit;
 }
