--- a/src/components/sbb-header/sbb-header.scss
+++ b/src/components/sbb-header/sbb-header.scss
@@ -22,6 +22,7 @@
   padding: 0 var(--sbb-page-base-offset-responsive);
   background: var(--sbb-color-white-default);
   transition: box-shadow var(--sbb-animation-duration-4x) var(--sbb-animation-easing);
+  z-index: 10;
 }
 
 .sbb-header--shadow {
