feat: add new scrollbar mixin

--- a/src/components/sbb-menu/sbb-menu.scss
+++ b/src/components/sbb-menu/sbb-menu.scss
@@ -24,6 +24,8 @@
 }
 
 .sbb-menu {
+  @include scrollbar('dark', var(--sbb-border-radius-4x));
+
   --sbb-menu-transform: translateY(100%);
 
   max-height: calc(100vh - var(--sbb-spacing-fixed-8x));
