feat: add new text size l

--- a/src/global/core/shared/variables.scss
+++ b/src/global/core/shared/variables.scss
@@ -14,6 +14,7 @@
   --sbb-font-size-title-5: var(--sbb-typo-scale-default);
   --sbb-font-size-title-6: var(--sbb-typo-scale-0-875x);
   --sbb-font-size-text-xl: var(--sbb-typo-scale-1-25x);
+  --sbb-font-size-text-l: var(--sbb-typo-scale-1-125x);
   --sbb-font-size-text-m: var(--sbb-typo-scale-default);
   --sbb-font-size-text-s: var(--sbb-typo-scale-0-875x);
   --sbb-font-size-text-xs: var(--sbb-typo-scale-0-75x);
@@ -30,6 +31,7 @@
     --sbb-font-size-title-5: var(--sbb-typo-scale-1-25x);
     --sbb-font-size-title-6: var(--sbb-typo-scale-default);
     --sbb-font-size-text-xl: var(--sbb-typo-scale-1-5x);
+    --sbb-font-size-text-l: var(--sbb-typo-scale-1-25x);
     --sbb-font-size-text-m: var(--sbb-typo-scale-1-125x);
     --sbb-font-size-text-s: var(--sbb-typo-scale-default);
     --sbb-font-size-text-xs: var(--sbb-typo-scale-0-875x);
