--- a/src/global/mixins/mixins_typo.scss
+++ b/src/global/mixins/mixins_typo.scss
@@ -77,6 +77,17 @@
   @include text--bold;
 }
 
+@mixin text-l--regular {
+  @include text;
+
+  font-size: var(--sbb-font-size-text-l);
+}
+
+@mixin text-l--bold {
+  @include text-l--regular;
+  @include text--bold;
+}
+
 @mixin text-m--regular {
   @include text;
 
