--- a/src/global/theme/sbb-ch/mode--compact/variables.scss
+++ b/src/global/theme/sbb-ch/mode--compact/variables.scss
@@ -9,6 +9,7 @@
   --sbb-font-size-title-5: var(--sbb-typo-scale-default);
   --sbb-font-size-title-6: var(--sbb-typo-scale-0-875x);
   --sbb-font-size-text-xl: var(--sbb-typo-scale-1-125x);
+  --sbb-font-size-text-l: var(--sbb-typo-scale-1-125x);
   --sbb-font-size-text-m: var(--sbb-typo-scale-default);
   --sbb-font-size-text-s: var(--sbb-typo-scale-0-875x);
   --sbb-font-size-text-xs: var(--sbb-typo-scale-0-75x);
@@ -24,6 +25,7 @@
     --sbb-font-size-title-5: var(--sbb-typo-scale-default);
     --sbb-font-size-title-6: var(--sbb-typo-scale-0-875x);
     --sbb-font-size-text-xl: var(--sbb-typo-scale-1-125x);
+    --sbb-font-size-text-l: var(--sbb-typo-scale-1-125x);
     --sbb-font-size-text-m: var(--sbb-typo-scale-default);
     --sbb-font-size-text-s: var(--sbb-typo-scale-0-875x);
     --sbb-font-size-text-xs: var(--sbb-typo-scale-0-75x);
