feat: pause chromatic animations

--- a/src/global/mixins.scss
+++ b/src/global/mixins.scss
@@ -71,7 +71,8 @@
     }
 
     @if $radius != 0 {
-      border-radius: $radius;
+      border-end-end-radius: $radius;
+      border-start-end-radius: $radius;
     }
   }
 
