refactor(sbb-link-list): review/refactor (#1329)
refactor (#1238 sbb-link-list): refactor

This was a general overhaul of the sbb-link-list

BREAKING CHANGE:


- rename prop titleText to titleContent
- rename prop listDirection to horizontalFrom
- replace old approach for negativ variant with new pattern (boolean instead of variant)
- add a named slot of title to sbb-link-list to either pass markup or text content to the containing sbb-title component
- rework the internal slotted sbb-link instances handling completely
- remove button slot from link-list

--- a/src/components/sbb-link-list/sbb-link-list.scss
+++ b/src/components/sbb-link-list/sbb-link-list.scss
@@ -2,47 +2,39 @@
 // travel the shadow boundary are defined through this mixin
 @include host-component-properties;
 
-:host {
-  display: block;
-}
-
-sbb-title {
-  margin-block-end: var(--sbb-spacing-fixed-3x);
-}
-
-.link-list {
-  @include list-reset;
-}
-
 @mixin link-list--horizontal {
-  display: flex;
-  flex-wrap: wrap;
-  column-gap: var(--sbb-spacing-fixed-8x);
-}
+  sbb-title {
+    @include screenReaderOnly;
+  }
 
-.link-list--horizontal {
-  @include link-list--horizontal;
-}
-
-.link-list--horizontal-from-large {
-  @include mq($from: large) {
-    @include link-list--horizontal;
+  ul {
+    flex-flow: row wrap;
   }
 }
 
-/* stylelint-disable-next-line plugin/stylelint-bem-namics */
-::slotted(.link-list__item:not(:last-child)) {
-  margin-block-end: var(--sbb-spacing-fixed-3x);
+.sbb-link-list {
+  display: flex;
+  flex-direction: column;
+  gap: var(--sbb-spacing-fixed-3x);
 }
 
-// Need to be after the ::slotted(.link-list__item:not(:last-child))
-// selector due to specificity
-.link-list--horizontal ::slotted(.link-list__item) {
-  margin-block-end: unset;
+.sbb-link-list ul {
+  @include list-reset;
+
+  display: flex;
+  gap: var(--sbb-spacing-fixed-3x) var(--sbb-spacing-fixed-8x);
+  flex-direction: column;
 }
 
-.link-list--horizontal-from-large ::slotted(.link-list__item) {
-  @include mq($from: large) {
-    margin-block-end: unset;
+.sbb-link-list--horizontal {
+  @include link-list--horizontal;
+}
+
+@each $breakpointName, $value in $mq-breakpoints {
+  /* stylelint-disable-next-line plugin/stylelint-bem-namics */
+  .sbb-link-list--horizontal-from-#{$breakpointName} {
+    @include mq($from: #{$breakpointName}) {
+      @include link-list--horizontal;
+    }
   }
 }
